--- a/admin/Dockerfile
+++ b/admin/Dockerfile
@@ -1,11 +1,15 @@
 FROM node:16-alpine
 
-WORKDIR /usr/frontend
+# Create app directory
+WORKDIR /usr/src/app
 
-COPY . .
+# Install app dependencies
+# A wildcard is used to ensure both package.json AND package-lock.json are copied
+# where available (npm@5+)
 
+COPY package*.json ./
 RUN npm install
 
-
-CMD ["sh", "-c", "npm start"]
-
+COPY . .
+EXPOSE 8080
+CMD [ "node", "server.js" ]
