--- a/admin/Dockerfile
+++ b/admin/Dockerfile
@@ -11,5 +11,5 @@ COPY package*.json ./
 RUN npm install
 
 COPY . .
-EXPOSE 8080
-CMD [ "node", "server.js" ]
+EXPOSE 3000
+CMD ["sh", "-c", "npm start"]
