--- a/admin/Dockerfile
+++ b/admin/Dockerfile
@@ -1,15 +1,11 @@
-FROM node:16-alpine
+FROM node:16.14-alpine
 
-# Create app directory
-WORKDIR /usr/src/app
-
-# Install app dependencies
-# A wildcard is used to ensure both package.json AND package-lock.json are copied
-# where available (npm@5+)
-
-COPY package*.json ./
-RUN npm install
+WORKDIR /app-frontend
 
 COPY . .
+
+RUN npm install
+
 EXPOSE 3000
-CMD ["sh", "-c", "npm start"]
+
+CMD ["npm", "start"]
